--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,196 @@
 * {
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    padding: 0%;
+    box-sizing: border-box
+}
+
+body {
+    background-color: rgb(255, 255, 255);
+}
+
+header {
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    padding: 0 30px;
+    justify-content: space-between;
+    box-shadow: 0 1px 0 1px rgba(239, 239, 239, 1);
+}
+
+.left-container {
+    display: flex;
+    align-items: center;
+    gap: 35px;
+}
+
+.right-container {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo {
+    max-height: 130px;
+    max-width: 80px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        cursor: pointer;
+        transform: scale(1.5);
+    }
+}
+
+.nav-container nav {
+    display: flex;
+    gap: 20px;
+    a {
+        color: black;
+        font-weight: 500;
+        text-decoration: none;
+        &:hover {
+            color: rgb(180,211,55);
+        }
+    }
+    span {
+        font-size: 20px;
+    }
+}
+
+.tree-keed {
+    display: none;
+    gap: 15px;
+    cursor: pointer;
+    span {
+        color: black;
+    }
+    &:hover {
+        span {
+            color: rgb(180,211,55);
+        }
+    }
+}
+
+.search-con {
+    form {
+        display: flex;
+        align-items: center;
+    }
+    input {
+        padding-left: 10px;
+        width: 350px;
+        height: 40px;
+        border: none;
+        outline: black solid 1.3px;
+        border-radius: 30px;
+        transition: 0.1s ease;
+        &:focus {
+            outline: black 2px solid;
+        }
+    }
+    button {
+        background-color: rgb(255, 255, 255);
+        max-width: 25px;
+        max-height: 25px;
+        position: relative;
+        right: 8%;
+        border: none;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: 0.3s ease;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transform: scale(0.6);
+        }
+    }
+    &:hover {
+        input {
+            outline: black 2px solid;
+        }
+        button {
+            background-color: rgb(180,211,55);
+            transform: scale(1.1);
+        }
+    }
+}
+
+.profile, .cart {
+    max-width: 20px;    
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.cart img {
+    margin-left: 10px;
+    transform: scale(1.2);
+}
+
+.block-nav {
+    display: none;
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    top: 65px;
+    left: 0;
+}
+
+.line {
+    padding: 10px 20px;
+    outline: rgba(0, 0, 0, 0.1) solid 1px;
+    cursor: pointer;
+    span {
+        color: black;
+        text-decoration: none;
+        font-size: 14px;
+    }
+    &:hover {
+        background-color: rgb(222, 235, 168);
+    }
+}
+
+@media (max-width: 860px) {
+    .search-con {
+        input {
+                width: 200px;
+        }
+        button {
+            right: 13%;
+        }
+    }
+}
+
+@media (max-width: 715px) {
+    .search-con {
+        input {
+            position: fixed;
+            right: 25px;
+        }
+        button {
+            transform: scale(1.5);
+        }
+    }
+}
+
+@media (max-width: 648px) {
+    .logo {
+        max-width: 60px;
+    }
+    .nav-container nav a{
+        display: none;
+    }
+    .tree-keed {
+        display: flex;
+    }
+    .search-con {
+        input {
+            width :320px;
+        }
+        button {
+            transform: scale(1.5);
+        }
+    }   
 }
