--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
 }
 
 body {
@@ -11,7 +14,7 @@ body {
 header {
     background-color: rgb(255, 255, 255);
     display: flex;
-    padding: 0 30px;
+    padding: 5px 30px;
     justify-content: space-between;
     box-shadow: 0 1px 0 1px rgba(239, 239, 239, 1);
 }
@@ -19,7 +22,7 @@ header {
 .left-container {
     display: flex;
     align-items: center;
-    gap: 35px;
+    gap: 17px;
 }
 
 .right-container {
@@ -29,14 +32,15 @@ header {
 }
 
 .logo {
-    max-height: 130px;
-    max-width: 80px;
+    max-width: 150px;
+    max-height: 60px;
+    transform: scale(0.8);
     img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         cursor: pointer;
-        transform: scale(1.5);
+        
     }
 }
 
@@ -152,7 +156,7 @@ header {
     }
 }
 
-@media (max-width: 860px) {
+@media (max-width: 890px) {
     .search-con {
         input {
                 width: 200px;
@@ -163,7 +167,7 @@ header {
     }
 }
 
-@media (max-width: 715px) {
+@media (max-width: 760px) {
     .search-con {
         input {
             position: fixed;
@@ -175,9 +179,9 @@ header {
     }
 }
 
-@media (max-width: 648px) {
+@media (max-width: 698px) {
     .logo {
-        max-width: 60px;
+        max-width: 110px;
     }
     .nav-container nav a{
         display: none;
@@ -193,4 +197,137 @@ header {
             transform: scale(1.5);
         }
     }   
+}
+
+@media (max-width: 564px) {
+        .search-con {
+        input {
+            width :270px;
+        }
+    }   
+}
+
+/* Header */
+
+body {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#section-1 {
+    padding: 40px 140px; 
+    display: flex; 
+    gap: 40px; 
+    justify-content: space-between;
+    align-items: center;
+}
+
+#section-2 {
+    padding-bottom: 30px;
+    background-color: #FBFFE9;
+    outline: 1px solid rgba(0, 0, 0, 0.20);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#section-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.detail-block {
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    line-height: 30px;
+    h2 {
+        color: #B4D137;
+        font-size: 40px;
+        font-weight: 800;
+    }
+    span {
+        font-weight: 700;
+    }
+}
+
+.image-block {
+    width: 476px;
+    height: 230px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.title {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #B4D137;
+    font-size: 22px;
+    font-weight: bold;
+    span {
+        margin: 10px 0;
+    }
+    div {
+        background-color: rgba(0, 0, 0, 0.1);
+        width: 100%;
+        height: 1px;
+    }
+}
+
+.product-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    padding: 20px 0;
+    gap: 30px;
+}
+
+.product {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.1);
+}
+
+.image-product {
+    width: 200px;
+    height: 200px;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 5px 5px 0 0;
+    }
+}
+
+.name-product {
+    margin: 10px;
+    text-align: center;
+}
+
+.button-product button {
+    background-color: #C5E642;
+    border: none;
+    width: 200px;
+    height: 40px;
+    cursor: pointer;
+    transition: 0.3s ease;
+    &:hover {
+        transform: scale(1.06);
+        background-color: #b0cf36;
+    }
+    &:active {
+        background-color: #C5E642;
+    }
+}
+
+.detail-video {
+    background-color: #FBFFE9;
 }
