--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,12 +11,15 @@
 
 body {
     background-color: rgb(255, 255, 255);
+    overflow-x: hidden;
 }
 
 header {
     background-color: rgb(255, 255, 255);
     display: flex;
     position: fixed;
+    top: 0;
+    left: 0;
     width: 100%;
     padding: 5px 30px;
     justify-content: space-between;
@@ -137,22 +140,6 @@ header {
     }
 }
 
-.profile,
-.cart {
-    max-width: 20px;
-
-    img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-    }
-}
-
-.cart img {
-    margin-left: 10px;
-    transform: scale(1.2);
-}
-
 .block-nav {
     display: none;
     width: 100%;
@@ -203,7 +190,7 @@ header {
     }
 }
 
-@media (max-width: 698px) {
+@media (max-width: 740px) {
     .logo {
         max-width: 110px;
     }
@@ -288,6 +275,7 @@ body {
 .image-block {
     width: 476px;
     height: 230px;
+    min-width: 476px;
 
     img {
         width: 100%;
@@ -318,7 +306,7 @@ body {
 
 .product-item {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(5, 1fr);
     padding: 20px 0;
     gap: 30px;
 }
@@ -384,10 +372,13 @@ body {
     outline: 1px solid rgba(0, 0, 0, 0.1);
     margin-top: 30px;
     padding: 30px 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 40px;
+
+    div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 40px;
+    }
 
     button {
         background: none;
@@ -497,4 +488,34 @@ footer {
 .credit-block {
     color: white;
     font-weight: 600;
+}
+
+@media (max-width: 1152px) {
+    .product-item {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 1075px) {
+    #section-1 {
+        flex-direction: column-reverse;
+    }
+
+    .image-block {
+        width: 496px;
+        height: 250px;
+        min-width: 496px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .product-item {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 673px) {
+    #section-1 {
+        padding: 40px 0px;
+    }
 }
