--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -160,6 +160,8 @@ header {
     font-size: 14px;
 }
 
+
+
 /* Header */
 
 body {
@@ -202,8 +204,9 @@ body {
 
 .detail-block h2 {
     color: #B4D137;
-    font-size: 40px;
+    font-size: 60px;
     font-weight: 800;
+    margin-bottom: 15px;
 }
 
 
@@ -229,7 +232,7 @@ body {
     flex-direction: column;
     align-items: center;
     color: #B4D137;
-    font-size: 22px;
+    font-size: 30px;
     font-weight: bold;
 }
 
@@ -537,6 +540,14 @@ footer {
         width: 496px;
         height: 250px;
         min-width: 496px;
+    }
+
+    .detail-block h2 {
+        font-size: 40px;
+    }
+
+    .title span {
+        font-size: 20px;
     }
 }
 
