--- a/components/search.html
+++ b/components/search.html
@@ -154,7 +154,7 @@
 
             let response
             if (!query) {
-                response = await fetch(`http://192.168.1.44:3000/api/product`)
+                response = await fetch(`http://192.168.1.44:3000/api/products`)
             } else {
                 response = await fetch(`http://192.168.1.44:3000/api/product/search?keyword=${query}`)
             }
@@ -169,7 +169,7 @@
                 div.classList.add('product-show')
                 div.innerHTML = `
                     <div class="image-product-group">
-                        <img src="data:image/jpeg;base64,${item.image}" alt="">
+                        <img src="data:image/jpeg;base64,${item.images}" alt="">
                     </div>
                     <div class="title-product">
                         <span>${item.name}</span>
