--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -26,10 +26,24 @@ body {
     background-color: rgb(255, 255, 255);
     overflow-x: hidden;
     font-family: 'Prompt', -apple-system, BlinkMacSystemFont, sans-serif;
-    display: flex;
+}
+
+main {
+    display: none;
     flex-direction: column;
     gap: 30px;
 }
+
+#loader-frame {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1100;
+    transform: scale(1.3);
+}
+
 
 .particles {
     position: fixed;
