--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -41,9 +41,37 @@ main {
     width: 100%;
     height: 100%;
     z-index: 1100;
-    transform: scale(1.3);
 }
 
+#loader-frame {
+    opacity: 0;
+    transform: scale(0.95);
+    transition: opacity 0.8s ease, transform 0.8s ease;
+    pointer-events: none;
+}
+
+#loader-frame.visible {
+    opacity: 1;
+    transform: scale(1);
+    pointer-events: all;
+}
+
+#loader-frame.fade-out {
+    opacity: 0;
+    transform: scale(0.9);
+    pointer-events: none;
+}
+
+/* MAIN ซ่อนเริ่มต้น และกำหนด transition */
+#main-ss {
+    opacity: 0;
+    transition: opacity 1s ease;
+}
+
+/* เมื่อพร้อมแสดง */
+#main-ss.visible {
+    opacity: 1;
+}
 
 .particles {
     position: fixed;
@@ -97,6 +125,11 @@ header {
     z-index: 1000;
     box-shadow: 0 1px 0 1px rgba(239, 239, 239, 1);
     transition: 0.3s ease;
+    transform: translateY(-100);
+}
+
+header.visible {
+    transform: translateY(0);
 }
 
 .left-container {
