--- a/components/search.html
+++ b/components/search.html
@@ -135,14 +135,14 @@
 <body>
     <div class="serch-container">
         <div class="item-product">
-            <!-- <div class="product-show">
+            <div class="product-show">
                 <div class="image-product-group">
                     <img src="/assets/images/a9d4fd3e-6911-434e-b34c-b0d69e6c1820.jfif" alt="">
                 </div>
                 <div class="title-product">
                     <span>ป้ายไวนิล</span>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
 </body>
